--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -1,15 +1,43 @@
 # TODO
 
-- Delete database columns "departure_date", "arrival_date"
-- Update datatype columns "departure_time", "arrival_time" to datetime
-- Make new table "refunds"
+[Upcoming feature]
 - Update endpoint details
-  Flight (Get, Add, Delete)
   Bus (Get, Add, Delete)
   Train (Get, Add, Delete)
   Hotel (Get, Add, Delete)
   Tour (Get, Add, Delete)
-- Add Gomail, Goroutine, and GoCRON to this project (feature : Daily promo info from gmail)
+
+- Add Gomail, Goroutine, and GoCRON
+
+[Endpoint progress]
+
+| No | Endpoint	        | Access	  | Method	  | Progress  |
+|----| ---------------- | --------- | --------- | --------- |
+| 1  | /login	          | All		    | POST		  | done      |
+| 2  | /logout	        | All		    | GET		    | done      |
+| 3  | /user		        | All		    | POST		  | done      |
+| 4  | /user		        | User		  | PUT		    | done      |
+| 5  | /user/hotel	    | All		    | GET		    |           |
+| 6  | /user/hotel/room | All		    | GET		    |           |
+| 7  | /user/hotel/room | User		  | POST		  |           |
+| 8  | /user/flight	    | All		    | GET		    |           |
+| 9  | /user/flight	    | User		  | POST		  |           |
+| 10 | /user/bus 	      | All		    | GET		    |           |
+| 11 | /user/bus 	      | User		  | POST		  |           |
+| 12 | /user/train	    | All		    | GET		    |           |
+| 13 | /user/train	    | User		  | POST		  |           |
+| 14 | /user/tour	      | All		    | GET		    |           |
+| 15 | /user/tour	      | User		  | POST		  |           |
+| 16 | /user/order	    | User		  | GET		    |           |
+| 17 | /user/order 	    | User		  | DELETE	  |           |
+| 18 | /partner	        | All		    | POST		  | done      |
+| 19 | /partner	        | Partner	  | PUT		    |           |
+| 20 | /partner/flight  | Partner	  | GET		    |           |
+| 21 | /partner/flight  | Partner	  | POST  	  |           |
+| 22 | /partner/flight  | Partner	  | DELETE	  |           |
+| 23 | /admin/refund    | Admin		  | GET		    |           |
+| 24 | /admin/refund    | Admin		  | DELETE	  |           |
+
 
 
 
