--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -17,11 +17,11 @@
 | 2  | /logout	        | All		    | GET		    | done      |
 | 3  | /user		        | All		    | POST		  | done      |
 | 4  | /user		        | User		  | PUT		    | done      |
-| 5  | /user/hotel	    | All		    | GET		    |ON PROGRESS|
-| 6  | /user/hotel/room | All		    | GET		    |ON PROGRESS|
+| 5  | /user/hotel	    | All		    | GET		    | done      |
+| 6  | /user/hotel/room | All		    | GET		    | done      |
 | 7  | /user/hotel/room | User		  | POST		  |ON PROGRESS|
-| 8  | /user/flight	    | All		    | GET		    |ON PROGRESS|
-| 9  | /user/flight	    | User		  | POST		  |ON PROGRESS|
+| 8  | /user/flight	    | All		    | GET		    | done      |
+| 9  | /user/flight	    | User		  | POST		  | done      |
 | 10 | /user/bus 	      | All		    | GET		    |ON PROGRESS|
 | 11 | /user/bus 	      | User		  | POST		  |ON PROGRESS|
 | 12 | /user/train	    | All		    | GET		    |ON PROGRESS|
