--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -1,45 +1,6 @@
 # TODO
 
-[Upcoming feature]
-- Update endpoint details
-  Bus (Get, Add, Delete)
-  Train (Get, Add, Delete)
-  Hotel (Get, Add, Delete)
-  Tour (Get, Add, Delete)
-
-- Add Gomail, Goroutine, and GoCRON
-
-[Endpoint progress]
-
-| No | Endpoint	          | Access	  | Method	  | Progress  |
-|----| ------------------ | --------- | --------- | --------- |
-| 1  | /login	            | All		    | POST		  | done      |
-| 2  | /logout	          | All		    | GET		    | done      |
-| 3  | /user		          | All		    | POST		  | done      |
-| 4  | /user		          | User		  | PUT		    | done      |
-| 5  | /user/hotel	      | All		    | GET		    | done      |
-| 6  | /user/hotel/room   | All		    | GET		    | done      |
-| 7  | /user/hotel/room   | User		  | POST		  | done      |
-| 8  | /user/flight	      | All		    | GET		    | done      |
-| 9  | /user/flight	      | User		  | POST		  | done      |
-| 10 | /user/bus 	        | All		    | GET		    | done      |
-| 11 | /user/bus 	        | User		  | POST		  | done      |
-| 12 | /user/train	      | All		    | GET		    | done      |
-| 13 | /user/train	      | User		  | POST		  | done      |
-| 14 | /user/tour	        | All		    | GET		    | done      |
-| 15 | /user/tourSchedule | All		    | GET		    | done      |
-| 16 | /user/tour	        | User		  | POST		  | done      |
-| 17 | /user/order	      | User		  | GET		    | done      |
-| 18 | /user/order 	      | User		  | PUT	      | done      |
-| 19 | /partner	          | All		    | POST		  | done      |
-| 20 | /partner	          | Partner	  | PUT		    | done      |
-| 21 | /partner/flight    | Partner	  | GET		    | done      |
-| 22 | /partner/flight    | Partner	  | POST  	  | done      |
-| 23 | /partner/flight    | Partner	  | DELETE	  |ON PROGRESS|
-| 24 | /admin/refund      | Admin		  | GET		    | done      |
-| 25 | /admin/refund      | Admin		  | DELETE	  |ON PROGRESS|
-
-
+[Complete]
 
 
 
